objects/ssot__CarePlanTemplateBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CarePlanTemplateBenefitPriority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanTemplateId__c</fullName>
        <label>Care Plan Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Plan Template Benefit Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramBenefitId__c</fullName>
        <label>Program Benefit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576038591_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanTemplateBenefit_CarePlanTemp_rel</label>
        <referenceTo>ssot__CarePlanTemplate__dlm</referenceTo>
        <relationshipLabel>CarePlanTemplateBenefit_CarePlanTemp_rel</relationshipLabel>
        <relationshipName>rel_1716576038591_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726576517_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CarePlanTemplateBenefit_ProgramBenef_rel</label>
        <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
        <relationshipLabel>CarePlanTemplateBenefit_ProgramBenef_rel</relationshipLabel>
        <relationshipName>rel_1716726576517_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>